--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -13,6 +13,7 @@ height: 600px;
     text-align: center;
     font-style: normal;
     text-transform: capitalize;
+} 
 .content{
     align-items: center;
 }
