--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -1,155 +1,174 @@
-               * {
-                   pad: 0;
-                   margin: 0;
-               }
-               
-               img {
-                   width: 100%;
-                   margin: 0 auto;
-               }
-               
-               ul li {
-                   /*to remove dot */
-                   list-style: none;
-               }
-               
-               a {
-                   /* to remove under line*/
-                   text-decoration: none;
-               }
-               
-               ul li:hover {
-                   color: #f80202;
-               }
-               
-               .internal-wrapper {
-                   display: flex;
-                   justify-content: space-between;
-                   background-color: rgb(54, 42, 42);
-                   padding: 30px;
-               }
-               
-               #home {
-                   background-image: url(../image/banner.jpg);
-                   height: 600px;
-                   width: 100%;
-               }
-               
-               .style {
-                   color: black;
-                   font-weight: bold;
-                   font-family: 'Times New Roman', Times, serif;
-                   font-size: 55px;
-                   text-align: center;
-                   font-style: normal;
-                   text-transform: capitalize;
-               }
-               
-               .content {
-                   align-items: center;
-               }
-               
-               .content h3 {
-                   font-size: 30px;
-                   text-align: center;
-               }
-               
-               .content p {
-                   font-size: 15px;
-                   text-align: center;
-               }
-               
-               .oa {
-                   text-align: center;
-               }
-               
-               .container {
-                   background-image: url(/image/addisu.gif);
-                   border-radius: 20px;
-                   color: white;
-                   text-transform: uppercase;
-                   font-style: italic;
-                   text-align: center;
-               }
-               
-               #add {
-                   border-radius: 25px;
-                   border: 4px solid green;
-                   border-left-width: 20px;
-                   border-left: 10px solid red;
-                   border-top: 10px solid goldenrod;
-                   border-right: 10px solid magenta;
-                   border-bottom: 10px solid green;
-               }
-               
-               #FirstName {
-                   border-radius: 10px;
-                   width: 25%;
-                   padding: 12px;
-                   border: 5px solid darkgray;
-               }
-               
-               #LastName {
-                   border-radius: 10px;
-                   width: 25%;
-                   padding: 12px;
-                   border: 5px solid orangered;
-               }
-               
-               #email {
-                   border-radius: 10px;
-                   width: 25%;
-                   padding: 12px;
-                   border: 5px solid blue;
-               }
-               
-               #phonenumber {
-                   border-radius: 10px;
-                   width: 25%;
-                   padding: 12px;
-                   border: 5px solid goldenrod;
-               }
-               
-               #button {
-                   width: 90px;
-                   height: 40px;
-                   border-radius: 20px;
-                   background-color: greenyellow;
-                   box-shadow: 0 10 20px 0 orangered;
-               }
-               
-               #button:hover {
-                   background-color: goldenrod;
-               }
-               
-               .lab {
-                   text-align: center;
-                   color: greenyellow;
-                   font-style: italic;
-                   text-transform: uppercase;
-               }
-               
-               table {
-                   width: 60%;
-                   margin: 20px auto;
-                   border-collapse: collapse;
-                   background-color: dodgerblue;
-                   border-radius: 30px;
-                   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-               }
-               
-               table th,
-               table td {
-                   padding: 15px;
-                   text-align: left;
-                   border: 1px solid #ddd;
-               }
-               
-               table th {
-                   background-color: #333;
-                   color: white;
-               }
-               
-               table tr:nth-child(even) {
-                   background-color: #f9f9f9;
-               }
+                           * {
+                               pad: 0;
+                               margin: 0;
+                           }
+                           
+                           img {
+                               width: 100%;
+                               margin: 0 auto;
+                           }
+                           
+                           ul li {
+                               /*to remove dot */
+                               list-style: none;
+                           }
+                           
+                           a {
+                               /* to remove under line*/
+                               text-decoration: none;
+                           }
+                           
+                           ul li:hover {
+                               color: #f80202;
+                           }
+                           
+                           .logo-wrapper {
+                               background-color: rgb(160, 216, 160);
+                               display: flex;
+                               padding-left: 30px;
+                               margin-left: 1%;
+                               padding-top: 15px;
+                           }
+                           
+                           .logo-wrapper h1 {
+                               color: rgb(187, 7, 7);
+                               font-style: italic;
+                               font-size: 40px;
+                               padding: 1px 0 10px;
+                           }
+                           
+                           .logo {
+                               width: 30px;
+                           }
+                           
+                           .internal-wrapper {
+                               display: flex;
+                               justify-content: space-between;
+                               background-color: rgb(54, 42, 42);
+                               padding: 30px;
+                           }
+                           
+                           #home {
+                               background-image: url(../image/banner.jpg);
+                               height: 600px;
+                               width: 100%;
+                           }
+                           
+                           .style {
+                               color: black;
+                               font-weight: bold;
+                               font-family: 'Times New Roman', Times, serif;
+                               font-size: 55px;
+                               text-align: center;
+                               font-style: normal;
+                               text-transform: capitalize;
+                           }
+                           
+                           .content {
+                               align-items: center;
+                           }
+                           
+                           .content h3 {
+                               font-size: 30px;
+                               text-align: center;
+                           }
+                           
+                           .content p {
+                               font-size: 15px;
+                               text-align: center;
+                           }
+                           
+                           .oa {
+                               text-align: center;
+                           }
+                           
+                           .container {
+                               background-image: url(/image/addisu.gif);
+                               border-radius: 20px;
+                               color: white;
+                               text-transform: uppercase;
+                               font-style: italic;
+                               text-align: center;
+                           }
+                           
+                           #add {
+                               border-radius: 25px;
+                               border: 4px solid green;
+                               border-left-width: 20px;
+                               border-left: 10px solid red;
+                               border-top: 10px solid goldenrod;
+                               border-right: 10px solid magenta;
+                               border-bottom: 10px solid green;
+                           }
+                           
+                           #FirstName {
+                               border-radius: 10px;
+                               width: 25%;
+                               padding: 12px;
+                               border: 5px solid darkgray;
+                           }
+                           
+                           #LastName {
+                               border-radius: 10px;
+                               width: 25%;
+                               padding: 12px;
+                               border: 5px solid orangered;
+                           }
+                           
+                           #email {
+                               border-radius: 10px;
+                               width: 25%;
+                               padding: 12px;
+                               border: 5px solid blue;
+                           }
+                           
+                           #phonenumber {
+                               border-radius: 10px;
+                               width: 25%;
+                               padding: 12px;
+                               border: 5px solid goldenrod;
+                           }
+                           
+                           #button {
+                               width: 90px;
+                               height: 40px;
+                               border-radius: 20px;
+                               background-color: greenyellow;
+                               box-shadow: 0 10 20px 0 orangered;
+                           }
+                           
+                           #button:hover {
+                               background-color: goldenrod;
+                           }
+                           
+                           .lab {
+                               text-align: center;
+                               color: greenyellow;
+                               font-style: italic;
+                               text-transform: uppercase;
+                           }
+                           
+                           table {
+                               width: 60%;
+                               margin: 20px auto;
+                               border-collapse: collapse;
+                               background-color: dodgerblue;
+                               border-radius: 30px;
+                               box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+                           }
+                           
+                           table th,
+                           table td {
+                               padding: 15px;
+                               text-align: left;
+                               border: 1px solid #ddd;
+                           }
+                           
+                           table th {
+                               background-color: #333;
+                               color: white;
+                           }
+                           
+                           table tr:nth-child(even) {
+                               background-color: #f9f9f9;
+                           }
