--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -1,15 +1,16 @@
     Body {
-        background-color: gray;
+        background-color: #0a6375;
+
     }
-    
+
     #home {
         background-image: url(../image/banner.jpg);
         height: 600px;
         width: 100%;
     }
-    
+
     .style {
-        color: black;
+        color: white;
         font-weight: bold;
         font-family: 'Times New Roman', Times, serif;
         font-size: 55px;
@@ -17,25 +18,29 @@
         font-style: normal;
         text-transform: capitalize;
     }
-    
+
     .content {
         align-items: center;
+        color: white;
+        list-style: square;
     }
-    
+
     .content h3 {
         font-size: 30px;
         text-align: center;
+        list-style: square;
     }
-    
+
     .content p {
+        list-style: square;
         font-size: 15px;
         text-align: center;
     }
-    
+
     .oa {
         text-align: center;
     }
-    
+
     .container {
         background-image: url(/image/addisu.gif);
         border-radius: 20px;
@@ -44,45 +49,47 @@
         font-style: italic;
         text-align: center;
     }
-    
+
     #add {
         border-radius: 25px;
         border: 4px solid green;
+        background-color: #0a6373;
         border-left-width: 20px;
         border-left: 10px solid red;
         border-top: 10px solid goldenrod;
         border-right: 10px solid magenta;
         border-bottom: 10px solid green;
+
     }
-    
+
     #FirstName {
         border-radius: 10px;
         width: 25%;
         padding: 12px;
-        border: 5px solid darkgray;
+        border: 5px solid #0a6375;
     }
-    
+
     #LastName {
         border-radius: 10px;
         width: 25%;
         padding: 12px;
         border: 5px solid orangered;
     }
-    
+
     #email {
         border-radius: 10px;
         width: 25%;
         padding: 12px;
         border: 5px solid blue;
     }
-    
+
     #phonenumber {
         border-radius: 10px;
         width: 25%;
         padding: 12px;
         border: 5px solid goldenrod;
     }
-    
+
     #button {
         width: 90px;
         height: 40px;
@@ -90,18 +97,18 @@
         background-color: greenyellow;
         box-shadow: 0 10 20px 0 orangered;
     }
-    
+
     #button:hover {
         background-color: goldenrod;
     }
-    
+
     .lab {
         text-align: center;
         color: greenyellow;
         font-style: italic;
         text-transform: uppercase;
     }
-    
+
     table {
         width: 60%;
         margin: 20px auto;
@@ -110,19 +117,19 @@
         border-radius: 30px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
-    
+
     table th,
     table td {
         padding: 15px;
         text-align: left;
         border: 1px solid #ddd;
     }
-    
+
     table th {
         background-color: #333;
         color: white;
     }
-    
+
     table tr:nth-child(even) {
         background-color: #f9f9f9;
     }
