--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -1,6 +1,8 @@
                            * {
+                               /*remove default paddiin and margin*/
                                pad: 0;
                                margin: 0;
+                               font-family: Arial, sans-serif;
                            }
                            
                            img {
@@ -17,35 +19,46 @@
                                /* to remove under line*/
                                text-decoration: none;
                            }
+                           /*header*/
                            
-                           ul li:hover {
-                               color: #f80202;
+                           header {
+                               width: 100%;
+                               position: sticky;
                            }
                            
                            .logo-wrapper {
                                background-color: rgb(160, 216, 160);
                                display: flex;
                                padding-left: 30px;
-                               margin-left: 1%;
                                padding-top: 15px;
+                               margin: 2px 10px;
                            }
                            
                            .logo-wrapper h1 {
                                color: rgb(187, 7, 7);
                                font-style: italic;
                                font-size: 40px;
-                               padding: 1px 0 10px;
+                               padding: 1px 0 10px 15px;
                            }
                            
                            .logo {
-                               width: 30px;
+                               width: 45px;
                            }
                            
                            .internal-wrapper {
                                display: flex;
                                justify-content: space-between;
                                background-color: rgb(54, 42, 42);
-                               padding: 30px;
+                               padding: 25px;
+                               margin: 1px 10px 10px 10px;
+                           }
+                           
+                           .internal-wrapper li a {
+                               color: #fff;
+                           }
+                           
+                           a:hover {
+                               background-color: rgb(255, 102, 0);
                            }
                            
                            #home {
