--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -24,6 +24,7 @@
                            header {
                                width: 100%;
                                position: sticky;
+                               top: 0;
                            }
                            
                            .logo-wrapper {
@@ -31,7 +32,6 @@
                                display: flex;
                                padding-left: 30px;
                                padding-top: 15px;
-                               margin: 2px 10px;
                            }
                            
                            .logo-wrapper h1 {
@@ -50,7 +50,7 @@
                                justify-content: space-between;
                                background-color: rgb(54, 42, 42);
                                padding: 25px;
-                               margin: 1px 10px 10px 10px;
+                               margin-bottom: 10px;
                            }
                            
                            .internal-wrapper li a {
