--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -65,6 +65,16 @@
   }
   /* endingheader */
   /*footer*/
+  
+  footer {
+      background-color: rgba(100, 97, 97, 0.849);
+      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+      margin: 20px;
+  }
+  
+  .internal-footer {
+      display: flex;
+  }
   /*footer*/
   
   #home {
