--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -1,141 +1,4 @@
-Body {
-    background-color: #0a6375;
-
-}
-
-#home {
-    background-image: url(../image/banner.jpg);
-    height: 600px;
-    width: 100%;
-}
-
-.style {
-    color: white;
-    font-weight: bold;
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 55px;
-    text-align: center;
-    font-style: normal;
-    text-transform: capitalize;
-}
-
-.content {
-    align-items: center;
-    color: white;
-    list-style: square;
-}
-
-.content h3 {
-    font-size: 30px;
-    text-align: center;
-    list-style: square;
-}
-
-.content p {
-    list-style: square;
-    font-size: 15px;
-    text-align: center;
-}
-
-.oa {
-    text-align: center;
-}
-
-.container {
-    align-items: center;
-    background-color: #333;
-
-    margin-left: 120px;
-    color: white;
-    width: 70%;
-    text-transform: uppercase;
-    font-style: italic;
-    text-align: center;
-}
-
-#add {
-    border-radius: 65px;
-    border: 4px solid green;
-    background-color: #0a6373;
-    border-left-width: 20px;
-    border-left: 10px solid red;
-    border-top: 10px solid goldenrod;
-    border-right: 10px solid magenta;
-    border-bottom: 10px solid green;
-
-}
-
-#FirstName {
-    border-radius: 10px;
-    width: 25%;
-    padding: 12px;
-    border: 5px solid #0a6375;
-}
-
-#LastName {
-    border-radius: 10px;
-    width: 25%;
-    padding: 12px;
-    border: 5px solid orangered;
-}
-
-#email {
-    border-radius: 10px;
-    width: 25%;
-    padding: 12px;
-    border: 5px solid blue;
-}
-
-#phonenumber {
-    border-radius: 10px;
-    width: 25%;
-    padding: 12px;
-    border: 5px solid goldenrod;
-}
-
-#button {
-    width: 90px;
-    height: 40px;
-    border-radius: 20px;
-    background-color: greenyellow;
-    box-shadow: 0 10 20px 0 orangered;
-}
-
-#button:hover {
-    background-color: goldenrod;
-}
-
-.lab {
-    text-align: center;
-    color: greenyellow;
-    font-style: italic;
-    text-transform: uppercase;
-}
-
-table {
-    width: 60%;
-    margin: 20px auto;
-    border-collapse: collapse;
-    background-color: dodgerblue;
-    border-radius: 30px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-table th,
-table td {
-    padding: 15px;
-    text-align: left;
-    border: 1px solid #ddd;
-}
-
-table th {
-    background-color: #333;
-    color: white;
-}
-
-table tr:nth-child(even) {
-    background-color: #f9f9f9;
-}
+/*general styling*/
 
 * {
     /*remove default paddiin and margin*/
@@ -149,7 +12,7 @@ img {
     margin: 0 auto;
 }
 
-ul li {
+li {
     /*to remove dot */
     list-style: none;
 }
@@ -158,6 +21,14 @@ a {
     /* to remove under line*/
     text-decoration: none;
 }
+
+a:hover {
+    background-color: rgb(255, 102, 0);
+}
+
+
+/*general styling*/
+
 
 /*header*/
 
@@ -197,215 +68,38 @@ header {
     color: #fff;
 }
 
-a:hover {
-    background-color: rgb(255, 102, 0);
-}
-
-#home {
-    background-image: url(../image/banner.jpg);
-    height: 600px;
-    width: 100%;
-}
-
-.style {
-    color: black;
-    font-weight: bold;
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 55px;
-    text-align: center;
-    font-style: normal;
-    text-transform: capitalize;
-}
-
-.content {
-    align-items: center;
-}
-
-.content h3 {
-    font-size: 30px;
-    text-align: center;
-}
-
-.content p {
-    font-size: 15px;
-    text-align: center;
-}
-
-.oa {
-    text-align: center;
-}
-
-.container {
-
-    border-radius: 20px;
-    color: white;
-    text-transform: uppercase;
-    font-style: italic;
-    text-align: center;
-}
-
-#add {
-    border-radius: 25px;
-    border: 4px solid green;
-    border-left-width: 20px;
-    border-left: 10px solid red;
-    border-top: 10px solid goldenrod;
-    border-right: 10px solid magenta;
-    border-bottom: 10px solid green;
-}
-
-#FirstName {
-    border-radius: 10px;
-    width: 25%;
-    padding: 12px;
-    border: 5px solid darkgray;
-}
-
-#LastName {
-    border-radius: 10px;
-    width: 25%;
-    padding: 12px;
-    border: 5px solid orangered;
-}
-
-#email {
-    border-radius: 10px;
-    width: 25%;
-    padding: 12px;
-    border: 5px solid blue;
-}
-
-#phonenumber {
-    border-radius: 10px;
-    width: 25%;
-    padding: 12px;
-    border: 5px solid goldenrod;
-}
-
-#button {
-    width: 90px;
-    height: 40px;
-    border-radius: 20px;
-    background-color: greenyellow;
-    box-shadow: 0 10 20px 0 orangered;
-}
-
-#button:hover {
-    background-color: goldenrod;
-}
-
-.lab {
-    text-align: center;
-    color: greenyellow;
-    font-style: italic;
-    text-transform: uppercase;
-}
-
-table {
-    width: 60%;
-    margin: 20px auto;
-    border-collapse: collapse;
-    background-color: dodgerblue;
-    border-radius: 30px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-table th,
-table td {
-    padding: 15px;
-    text-align: left;
-    border: 1px solid #ddd;
-}
-
-table th {
-    background-color: #333;
-    color: white;
-}
-
-table tr:nth-child(even) {
-    background-color: #f9f9f9;
-}
-
-
-/*general styling*/
-
-* {
-    /*remove default paddiin and margin*/
-    pad: 0;
-    margin: 0;
-    font-family: Arial, sans-serif;
-}
-
-img {
-    width: 100%;
-    margin: 0 auto;
-}
-
-ul li {
-    /*to remove dot */
-    list-style: none;
-}
-
-a {
-    /* to remove under line*/
-    text-decoration: none;
-}
-
-a:hover {
-    background-color: rgb(255, 102, 0);
-}
-
-/*general styling*/
-/*header*/
-
-header {
-    width: 100%;
-    position: sticky;
-    top: 0;
-}
-
-.logo-wrapper {
-    background-color: rgb(160, 216, 160);
-    display: flex;
-    padding-left: 30px;
-    padding-top: 15px;
-}
-
-.logo-wrapper h1 {
-    color: rgb(187, 7, 7);
-    font-style: italic;
-    font-size: 40px;
-    padding: 1px 0 10px 15px;
-}
-
-.logo {
-    width: 45px;
-}
-
-.internal-wrapper {
-    display: flex;
-    justify-content: space-between;
-    background-color: rgb(54, 42, 42);
-    padding: 25px;
-    margin-bottom: 10px;
-}
-
-.internal-wrapper li a {
-    color: #fff;
-}
 
 /* endingheader */
+
+
 /*footer*/
 
 footer {
     background-color: rgba(100, 97, 97, 0.849);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin: 20px;
+    padding: 30px;
+    border-radius: 30px;
 }
 
 .internal-footer {
     display: flex;
+    justify-content: space-between;
 }
+
+.copyright {
+    display: flex;
+    justify-content: right;
+    padding: 20px 0 0 20px;
+    margin-right: 10px;
+}
+
+.logo-footer {
+    width: 5px;
+    padding-bottom: 10px;
+    margin-bottom: 2px;
+}
+
 
 /*footer*/
 
@@ -413,6 +107,10 @@ footer {
     background-image: url(../image/banner.jpg);
     height: 600px;
     width: 100%;
+}
+
+#about h2 {
+    text-align: center;
 }
 
 .style {
@@ -444,7 +142,6 @@ footer {
 }
 
 .container {
-
     border-radius: 20px;
     color: white;
     text-transform: uppercase;
