--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -1,273 +1,276 @@
-
 /*general styling*/
 
 * {
-    /*remove default paddiin and margin*/
-    pad: 0;
-    margin: 0;
-    font-family: Arial, sans-serif;
+  /*remove default paddiin and margin*/
+  pad: 0;
+  margin: 0;
+  font-family: Arial, sans-serif;
 }
 
 img {
-    width: 100%;
-    margin: 0 auto;
+  width: 100%;
+  margin: 0 auto;
 }
 
 li {
-    /*to remove dot */
-    list-style: none;
+  /*to remove dot */
+  list-style: none;
 }
 
 a {
-    /* to remove under line*/
-    text-decoration: none;
+  /* to remove under line*/
+  text-decoration: none;
 }
 
 a:hover {
-    background-color: rgb(255, 102, 0);
+  background-color: rgb(255, 102, 0);
 }
 
-
 /*general styling*/
-
 
 /*header*/
 
 header {
-    width: 100%;
-    position: sticky;
-    top: 0;
+  width: 100%;
+  position: sticky;
+  top: 0;
 }
 
 .logo-wrapper {
-    background-color: rgb(160, 216, 160);
-    display: flex;
-    padding-left: 30px;
-    padding-top: 15px;
+  background-color: rgb(160, 216, 160);
+  display: flex;
+  padding-left: 30px;
+  padding-top: 15px;
 }
 
 .logo-wrapper h1 {
-    color: rgb(187, 7, 7);
-    font-style: italic;
-    font-size: 40px;
-    padding: 1px 0 10px 15px;
+  color: rgb(187, 7, 7);
+  font-style: italic;
+  font-size: 40px;
+  padding: 1px 0 10px 15px;
 }
 
 .logo {
-    width: 45px;
+  width: 45px;
 }
 
 .internal-wrapper {
-    display: flex;
-    justify-content: space-between;
-    background-color: rgb(54, 42, 42);
-    padding: 25px;
-    margin-bottom: 10px;
+  display: flex;
+  justify-content: space-between;
+  background-color: rgb(54, 42, 42);
+  padding: 25px;
+  margin-bottom: 10px;
 }
 
 .internal-wrapper li a {
-    color: #fff;
+  color: #fff;
 }
 
-
 /* endingheader */
-
 
 /*footer*/
 
 footer {
-    background-color: rgba(100, 97, 97, 0.849);
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    margin: 20px;
-    padding: 30px;
-    border-radius: 30px;
+  background-color: rgba(100, 97, 97, 0.849);
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  margin: 20px;
+  padding: 30px;
+  border-radius: 30px;
 }
 
 .internal-footer {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .copyright {
-    display: flex;
-    justify-content: right;
-    padding: 20px 0 0 20px;
-    margin-right: 10px;
+  display: flex;
+  justify-content: right;
+  padding: 20px 0 0 20px;
+  margin-right: 10px;
 }
 
 .logo-footer {
-    width: 5px;
-    padding-bottom: 10px;
-    margin-bottom: 2px;
+  width: 5px;
+  padding-bottom: 10px;
+  margin-bottom: 2px;
 }
-
 
 /*footer*/
 
 #home {
-    background-image: url(../image/banner.jpg);
-    height: 600px;
-    width: 100%;
+  background-image: url(../image/banner.jpg);
+  height: 500px; /*height of the viewport */
+  width: 100%; /*width of the viewport */
+
+  background-size: cover; /* This ensures the image covers the entire area */
+  background-position: center center; /* Centers the image */
+  background-repeat: no-repeat; /* Ensures the image doesn't repeat */
+  background-attachment: inherit; /* Keeps the image fixed when scrolling */
+}
+.text {
+  padding-top: 20px;
+  text-align: center;
+  font-size: 35px;
+  color: paleturquoise;
+}
+.text2 {
+  text-align: center;
+  font-size: 20px;
+  color: black;
 }
 
 #about h2 {
-    text-align: center;
+  text-align: center;
 }
-.goal-section{
-background-color: #a34678;
-margin: 20px;
+.goal-section {
+  background-color: #a34678;
+  margin: 20px;
 }
 
 .style {
-    color: black;
-    font-weight: bold;
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 55px;
-    text-align: center;
-    font-style: normal;
-    margin-left: 100px;
-    
-    width: 75%;
-    text-transform: capitalize;
+  color: black;
+  font-weight: bold;
+  font-family: "Times New Roman", Times, serif;
+  font-size: 55px;
+  text-align: center;
+  font-style: normal;
+  margin-left: 100px;
+
+  width: 75%;
+  text-transform: capitalize;
 }
 
 .content {
-    
-    align-items: center;
-    line-height: 1.5;
-    padding: 10px;
-    font-weight: 500;
-    font-size: 2rem;
-    
-    
-
+  align-items: center;
+  line-height: 1.5;
+  padding: 10px;
+  font-weight: 500;
+  font-size: 2rem;
 }
 
 .content h3 {
-    font-size: 30px;
-    text-align: center;
-    text-decoration: dotted;
-    color: rgb(227, 211, 211);
+  font-size: 30px;
+  text-align: center;
+  text-decoration: dotted;
+  color: rgb(227, 211, 211);
 }
 
 .content p {
-    text-decoration-color: #f9f9f9;
-    text-decoration: dotted;
-    font-size: 15px;
-    text-align: center;
+  text-decoration-color: #f9f9f9;
+  text-decoration: dotted;
+  font-size: 15px;
+  text-align: center;
 }
 
 .oa {
-    text-align: center;
+  text-align: center;
 }
 
 .container {
-    line-height: 3;
-    border-top-left-radius: 100px;
-    margin-left: 120px;
-    width: 75%;
-    background-color: #0a6375;
+  line-height: 3;
+  border-top-left-radius: 100px;
+  margin-left: 120px;
+  width: 75%;
+  background-color: #0a6375;
 
-    color: white;
-    text-transform: uppercase;
-    font-style: italic;
-    text-align: center;
-    border-bottom-right-radius: 100px;
+  color: white;
+  text-transform: uppercase;
+  font-style: italic;
+  text-align: center;
+  border-bottom-right-radius: 100px;
 }
 
 #add {
-    border-radius: 25px;
-    border-left: 10px solid red;
-    border-top: 10px solid goldenrod;
-    border-right: 10px solid magenta;
-    border-bottom: 10px solid green;
-    border-left-width: 20px;
+  border-radius: 25px;
+  border-left: 10px solid red;
+  border-top: 10px solid goldenrod;
+  border-right: 10px solid magenta;
+  border-bottom: 10px solid green;
+  border-left-width: 20px;
 }
 
-
-
 #FirstName {
-    border-radius: 10px;
-    width: 25%;
-    padding: 12px;
-    border: 5px solid darkgray;
+  border-radius: 10px;
+  width: 25%;
+  padding: 12px;
+  border: 5px solid darkgray;
 }
 
 #LastName {
-    border-radius: 10px;
-    width: 25%;
-    padding: 12px;
-    border: 5px solid orangered;
+  border-radius: 10px;
+  width: 25%;
+  padding: 12px;
+  border: 5px solid orangered;
 }
 
 #email {
-    border-radius: 10px;
-    width: 25%;
-    padding: 12px;
-    border: 5px solid blue;
+  border-radius: 10px;
+  width: 25%;
+  padding: 12px;
+  border: 5px solid blue;
 }
 
 #phonenumber {
-    border-radius: 10px;
-    width: 25%;
-    padding: 12px;
-    border: 5px solid goldenrod;
+  border-radius: 10px;
+  width: 25%;
+  padding: 12px;
+  border: 5px solid goldenrod;
 }
 
 #button {
-    width: 110px;
-    margin-bottom: 20px;
-    height: 40px;
-    color: white;
-    border-radius: 20px;
-    background-color: blue;
-
+  width: 110px;
+  margin-bottom: 20px;
+  height: 40px;
+  color: white;
+  border-radius: 20px;
+  background-color: blue;
 }
 
 #button:hover {
-    background-color: goldenrod;
+  background-color: goldenrod;
 }
 
 .lab {
-    text-align: center;
-    color: greenyellow;
-    font-style: italic;
-    text-transform: uppercase;
+  text-align: center;
+  color: greenyellow;
+  font-style: italic;
+  text-transform: uppercase;
 }
 
 .wrapper {
-    background-color: #356fab;
-    width: 80%;
-    border-radius: 45px;
-    margin: 50px auto;
-    padding: 20px;
-    height: 60vh;
+  background-color: #356fab;
+  width: 80%;
+  border-radius: 45px;
+  margin: 50px auto;
+  padding: 20px;
+  height: 60vh;
 }
 
 table {
-    background-color: #333;
-    width: 70%;
-    margin: 20px;
-    padding-top: 30px;
-    margin-left: 100px;
-    border-collapse: separate;
-    background-color: dodgerblue;
-    border-radius: 30px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: #333;
+  width: 70%;
+  margin: 20px;
+  padding-top: 30px;
+  margin-left: 100px;
+  border-collapse: separate;
+  background-color: dodgerblue;
+  border-radius: 30px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 table th,
 table td {
-    padding: 15px;
-    text-align: left;
-    border: 1px solid #ddd;
+  padding: 15px;
+  text-align: left;
+  border: 1px solid #ddd;
 }
 
 table th {
-    background-color: #333;
-    color: white;
+  background-color: #333;
+  color: white;
 }
 
 table tr:nth-child(even) {
-    background-color: #f9f9f9;
+  background-color: #f9f9f9;
 }
