--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -23,9 +23,9 @@ a {
 }
 
 a:hover {
-    text-shadow: 2px 2px 5px gray;
-    background-color: rgb(255, 102, 0);
-    color: greenyellow;
+    border: solid rgb(10, 10, 10) 3px;
+    color: yellow;
+    background-color: rgb(155, 43, 43);
 }
 
 
@@ -38,6 +38,8 @@ header {
     width: 100%;
     position: sticky;
     top: 0;
+    z-index: 100;
+    /* Ensure the header is above other content */
     size: 20px;
     background-color: rgb(10, 202, 250);
 }
